# job_parser_project

./: README.md  pyproject.toml
course_project_3/: classes.py  connector.py  engine_classes.py  main.py  res_HH.json  res_SJ.json  utils.py
job_parser/: classes.py  engine_classes.py  main.py  res_HH.json
