[tool.poetry]
name = "course-project-3"
version = "0.1.0"
description = ""
authors = ["Semen Oskolkov <oskolkovsemen@yandex.ru>"]
readme = "README.md"
packages = [{include = "course_project_3"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
