[tool.poetry]
name = "job_parser"
version = "0.1.0"
description = ""
authors = ["Semen Oskolkov <oskolkovsemen@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.scripts]
find_job = 'job_parser.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
